--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "asm1",
   "version": "0.0.0",
   "private": true,
-  "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "node app.js",
+    "nodemon": "nodemon app.js"
   },
   "dependencies": {
     "ejs": "^3.1.8",
