--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "nodemon": "nodemon app.js"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "~4.16.1",
     "nodemon": "^2.0.20"
