--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "nodemon": "nodemon app.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "~4.16.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.6.5",
     "nodemon": "^2.0.20"
   }
 }
